--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,10 +20,10 @@ body{
     font-weight: 800;
 }
 .contentText{
-    color:rgba(255,255,255,0.60);
+    color:rgba(255,255,255,0.70);
 }
 .nonImpText{
-    color:rgba(255,255,255,0.38);
+    color:rgba(255,255,255,0.60);
 }
 .navbar .collapse .navbar-nav .nav-link{
     border-top:2px solid transparent;
@@ -103,6 +103,10 @@ footer{
     border-radius: 50%;
     vertical-align: middle;
     padding: 0.5rem 0.6rem;
+}
+
+.social-icon:hover{
+    color:rgba(255,255,255,1) !important;
 }
 
 @keyframes gradient_animation{
